# captum_llm_attribution_experiment

./: .gitignore  README.md  pyproject.toml
configs/: config.json
src/experiment/: __main__.py
src/experiment/attributions/: attributions.py
src/experiment/config/: config.py
src/experiment/utils/: cli.py  model.py  plot.py  prompt.py
